--- a/static/demo/mapml-viewer-demo.html
+++ b/static/demo/mapml-viewer-demo.html
@@ -92,7 +92,7 @@
     <div class="tabcontent" id="HTML">
         <textarea rows="10" style="width:100%" id="htmlEditor">
 <mapml-viewer projection="OSMTILE" zoom="1" lat="60.0" lon="-100.0" controls>
-  <layer- label="OpenStreetMap" src="https://geogratis.gc.ca/mapml/en/osmtile/osm/" checked></layer->
+  <layer- label="OpenStreetMap" src="data/osm.mapml" checked></layer->
 </mapml-viewer></textarea>
     </div>
     <div class="tabcontent" id="CSS">
