--- a/static/demo/map-link-demo.html
+++ b/static/demo/map-link-demo.html
@@ -76,11 +76,14 @@
         .tab button.active {
             background-color: #ccc;
         }
+        .codemirror-highlighted {
+            background-color: rgba(255, 255, 119, .5);
+        }
     </style>
 </head>
 <body>
     <div style="text-align: center;">
-        <h2>MapML Demo: &lt;layer-&gt;</h2>
+        <h2>MapML Demo: &lt;map-link&gt;</h2>
         <button class="run" onclick="plot()">▶</button>
     </div>
 
@@ -91,9 +94,10 @@
 
     <div class="tabcontent" id="HTML">
         <textarea rows="10" style="width:100%" id="htmlEditor">
-<mapml-viewer projection="OSMTILE" zoom="12" lat="45.42" lon="-75.70">
+<mapml-viewer projection="OSMTILE" zoom="1" lat="60.0" lon="-100.0" controls>
   <layer- label="OpenStreetMap" src="data/osm.mapml" checked></layer->
   <layer- label="Ottawa" checked>
+    <map-link rel="license" title="Copyright FooBar Inc."></map-link>
     <map-meta name="projection" content="OSMTILE"></map-meta>
     <map-feature class="ottawa">
       <map-featurecaption>Ottawa</map-featurecaption>
@@ -102,30 +106,6 @@
           <map-coordinates>-75.697193 45.421530</map-coordinates>
         </map-point>
       </map-geometry>
-      <map-properties>
-        <table>
-          <thead>
-            <tr>
-              <th role="columnheader" scope="col">Property name</th>
-              <th role="columnheader" scope="col">Property value</th>
-            </tr>
-          </thead>
-          <tbody>
-            <tr>
-              <th scope="row">Name</th>
-              <td itemprop="amenity">Ottawa</td>
-            </tr>
-            <tr>
-              <th scope="row">Type</th>
-              <td itemprop="name">City</td>
-            </tr>
-            <tr>
-              <th scope="row">Website</th>
-              <td itemprop="website"><a href="https://ottawa.ca/" target="_blank">Ottawa</a></td>
-            </tr>
-          </tbody>
-        </table>
-      </map-properties>
     </map-feature>
   </layer->
 </mapml-viewer></textarea>
@@ -135,9 +115,6 @@
 .ottawa {
   fill: #ea4335;
   stroke: #b21511;
-}
-.ottawa:hover {
-  fill: green;
 }</textarea>
     </div>
 
@@ -152,6 +129,9 @@
             tabSize: 2,
             autoCloseTags: true
         });
+
+        // Highlighting code 
+        htmlEditor.markText({line: 3, ch: 0}, {line: 4, ch: -1}, {className: "codemirror-highlighted"});
 
         // Styling CSS Text Editor
         var cssEditor = CodeMirror.fromTextArea(document.getElementById('cssEditor'), {
@@ -182,6 +162,8 @@
             for (i=0; i<layers.length; ++i) {
                 layers[i].appendChild(mapmlCSS);
             }
+
+            console.log(layers);
 
             // Adding code to output div
             let output = document.getElementById('output');
