--- a/static/demo/map-meta-demo.html
+++ b/static/demo/map-meta-demo.html
@@ -76,11 +76,14 @@
         .tab button.active {
             background-color: #ccc;
         }
+        .codemirror-highlighted {
+            background-color: rgba(255, 255, 119, .5);
+        }
     </style>
 </head>
 <body>
     <div style="text-align: center;">
-        <h2>MapML Demo: &lt;layer-&gt;</h2>
+        <h2>MapML Demo: &lt;map-meta&gt;</h2>
         <button class="run" onclick="plot()">▶</button>
     </div>
 
@@ -91,53 +94,27 @@
 
     <div class="tabcontent" id="HTML">
         <textarea rows="10" style="width:100%" id="htmlEditor">
-<mapml-viewer projection="OSMTILE" zoom="12" lat="45.42" lon="-75.70">
+<mapml-viewer projection="OSMTILE" zoom="3" lat="45.41868" lon="-75.690276" controls>
   <layer- label="OpenStreetMap" src="data/osm.mapml" checked></layer->
-  <layer- label="Ottawa" checked>
+  <layer- label="Favourite Restaurant" checked>
     <map-meta name="projection" content="OSMTILE"></map-meta>
-    <map-feature class="ottawa">
-      <map-featurecaption>Ottawa</map-featurecaption>
-      <map-geometry>
+    <map-meta name="zoom" content="min=3,max=10,value=3"></map-meta>
+    <map-feature class="favourite">
+      <map-featurecaption>Big Daddy's Crab Shack</map-featurecaption>
+      <map-geometry cs="gcrs">
         <map-point>
-          <map-coordinates>-75.697193 45.421530</map-coordinates>
+          <map-coordinates>-75.690276 45.41868</map-coordinates>
         </map-point>
       </map-geometry>
-      <map-properties>
-        <table>
-          <thead>
-            <tr>
-              <th role="columnheader" scope="col">Property name</th>
-              <th role="columnheader" scope="col">Property value</th>
-            </tr>
-          </thead>
-          <tbody>
-            <tr>
-              <th scope="row">Name</th>
-              <td itemprop="amenity">Ottawa</td>
-            </tr>
-            <tr>
-              <th scope="row">Type</th>
-              <td itemprop="name">City</td>
-            </tr>
-            <tr>
-              <th scope="row">Website</th>
-              <td itemprop="website"><a href="https://ottawa.ca/" target="_blank">Ottawa</a></td>
-            </tr>
-          </tbody>
-        </table>
-      </map-properties>
     </map-feature>
   </layer->
 </mapml-viewer></textarea>
     </div>
     <div class="tabcontent" id="CSS">
         <textarea rows="10" style="width:100%" id="cssEditor">
-.ottawa {
+.favourite {
   fill: #ea4335;
   stroke: #b21511;
-}
-.ottawa:hover {
-  fill: green;
 }</textarea>
     </div>
 
@@ -152,6 +129,9 @@
             tabSize: 2,
             autoCloseTags: true
         });
+
+        // Highlighting code 
+        htmlEditor.markText({line: 3, ch: 0}, {line: 5, ch: -1}, {className: "codemirror-highlighted"});
 
         // Styling CSS Text Editor
         var cssEditor = CodeMirror.fromTextArea(document.getElementById('cssEditor'), {
@@ -182,6 +162,8 @@
             for (i=0; i<layers.length; ++i) {
                 layers[i].appendChild(mapmlCSS);
             }
+
+            console.log(layers);
 
             // Adding code to output div
             let output = document.getElementById('output');
