Added comments to make future code change easier
Added comments to highlight the following areas which can be changed to create/change the demo:

* Demo heading
* Mapml Code area
* CSS Code area
* Highlighting code lines

--- a/static/demo/extent-demo.html
+++ b/static/demo/extent-demo.html
@@ -80,6 +80,7 @@
 </head>
 <body>
     <div style="text-align: center;">
+        <!------------------------------------------------- CHANGE THIS ------------------------------------------------->
         <h2>MapML Demo: &lt;map-extent&gt;</h2>
         <button class="run" onclick="plot()">▶</button>
     </div>
@@ -90,6 +91,7 @@
     </div>
 
     <div class="tabcontent" id="HTML">
+        <!------------------------------------------------- CHANGE THIS ------------------------------------------------->
         <textarea rows="10" style="width:100%" id="htmlEditor">
 <mapml-viewer projection="OSMTILE">
   <layer- label="OpenStreetMap" checked>
@@ -109,6 +111,7 @@
 </mapml-viewer></textarea>
     </div>
     <div class="tabcontent" id="CSS">
+        <!------------------------------------------------- CHANGE THIS ------------------------------------------------->
         <textarea rows="10" style="width:100%" id="cssEditor">
 </textarea>
     </div>
