--- a/static/demo/layer-demo.html
+++ b/static/demo/layer-demo.html
@@ -80,8 +80,9 @@
 </head>
 <body>
     <div style="text-align: center;">
-        <h2>MapML Demo: &lt;layer-&gt;</h2>
-        <button class="run" onclick="plot()">▶</button>
+      <!------------------------------------------------- CHANGE THIS ------------------------------------------------->
+      <h2>MapML Demo: &lt;layer-&gt;</h2>
+      <button class="run" onclick="plot()">▶</button>
     </div>
 
     <div class="tab">
@@ -90,6 +91,7 @@
     </div>
 
     <div class="tabcontent" id="HTML">
+      <!------------------------------------------------- CHANGE THIS ------------------------------------------------->
         <textarea rows="10" style="width:100%" id="htmlEditor">
 <mapml-viewer projection="OSMTILE" zoom="12" lat="45.42" lon="-75.70">
   <layer- label="OpenStreetMap" src="data/osm.mapml" checked></layer->
@@ -131,6 +133,7 @@
 </mapml-viewer></textarea>
     </div>
     <div class="tabcontent" id="CSS">
+      <!------------------------------------------------- CHANGE THIS ------------------------------------------------->
         <textarea rows="10" style="width:100%" id="cssEditor">
 .ottawa {
   fill: #ea4335;
