--- a/static/demo/map-a-demo.html
+++ b/static/demo/map-a-demo.html
@@ -93,6 +93,7 @@
     </div>
 
     <div class="tabcontent" id="HTML">
+        <!------------------------------------------------- CHANGE THIS ------------------------------------------------->
         <textarea rows="10" style="width:100%" id="htmlEditor">
 <mapml-viewer projection="WGS84" zoom="3" lon="-90.8255278" lat="49.2943611" controls="">
   <layer- label="OpenStreetMap" src="data/osm.mapml" checked></layer->
@@ -126,6 +127,7 @@
 </mapml-viewer></textarea>
     </div>
     <div class="tabcontent" id="CSS">
+        <!------------------------------------------------- CHANGE THIS ------------------------------------------------->
         <textarea rows="10" style="width:100%" id="cssEditor">
 .map-a {
   stroke: red;
@@ -153,6 +155,7 @@
             autoCloseTags: true
         });
 
+        // ------------------------------------------------- CHANGE THIS ------------------------------------------------->
         // Highlighting code 
         htmlEditor.markText({line: 8, ch: 0}, {line: 9, ch: -1}, {className: "codemirror-highlighted"});
         htmlEditor.markText({line: 20, ch: 0}, {line: 21, ch: -1}, {className: "codemirror-highlighted"});
