--- a/static/demo/map-feature-demo.html
+++ b/static/demo/map-feature-demo.html
@@ -83,6 +83,7 @@
 </head>
 <body>
     <div style="text-align: center;">
+        <!------------------------------------------------- CHANGE THIS ------------------------------------------------->
         <h2>MapML Demo: &lt;map-feature&gt;</h2>
         <button class="run" onclick="plot()">▶</button>
     </div>
@@ -93,6 +94,7 @@
     </div>
 
     <div class="tabcontent" id="HTML">
+        <!------------------------------------------------- CHANGE THIS ------------------------------------------------->
         <textarea rows="10" style="width:100%" id="htmlEditor">
 <mapml-viewer projection="CBMTILE" zoom="1" lat="45.5052040" lon="-75.2202344" controls>
   <layer- label="Arizona" checked>
@@ -160,6 +162,7 @@
 </mapml-viewer></textarea>
     </div>
     <div class="tabcontent" id="CSS">
+        <!------------------------------------------------- CHANGE THIS ------------------------------------------------->
         <textarea rows="10" style="width:100%" id="cssEditor">
 .refDiff1 {
   fill: #A0DDE6;
