--- a/static/demo/mapml-viewer-demo.html
+++ b/static/demo/mapml-viewer-demo.html
@@ -80,6 +80,7 @@
 </head>
 <body>
     <div style="text-align: center;">
+        <!------------------------------------------------- CHANGE THIS ------------------------------------------------->
         <h2>MapML Demo: &lt;mapml-viewer&gt;</h2>
         <button class="run" onclick="plot()">▶</button>
     </div>
@@ -90,12 +91,14 @@
     </div>
 
     <div class="tabcontent" id="HTML">
+        <!------------------------------------------------- CHANGE THIS ------------------------------------------------->
         <textarea rows="10" style="width:100%" id="htmlEditor">
 <mapml-viewer projection="OSMTILE" zoom="1" lat="60.0" lon="-100.0" controls>
   <layer- label="OpenStreetMap" src="data/osm.mapml" checked></layer->
 </mapml-viewer></textarea>
     </div>
     <div class="tabcontent" id="CSS">
+        <!------------------------------------------------- CHANGE THIS ------------------------------------------------->
         <textarea rows="10" style="width:100%" id="cssEditor">
 </textarea>
     </div>
