--- a/static/demo/layer-demo.html
+++ b/static/demo/layer-demo.html
@@ -95,6 +95,7 @@
   <layer- label="OpenStreetMap" src="https://geogratis.gc.ca/mapml/en/osmtile/osm/" checked></layer->
   <layer- label="Ottawa" checked>
     <map-meta name="projection" content="OSMTILE"></map-meta>
+    <map-meta name="cs" content="gcrs"></map-meta>
     <map-feature class="ottawa">
       <map-featurecaption>Ottawa</map-featurecaption>
       <map-geometry>
