Added a missing cs='gcrs' in map-geometry

--- a/static/demo/map-link-demo.html
+++ b/static/demo/map-link-demo.html
@@ -7,7 +7,7 @@
     <title>Demo</title>
     <script type="module" src="../dist/mapml-viewer.js"></script>
     <link rel="stylesheet" href="embeded-demo-style.css"/>
-    
+
     <link rel="stylesheet" href="codemirror-5.64.0/lib/codemirror.css">
     <script src="codemirror-5.64.0/lib/codemirror.js"></script>
     <script src="codemirror-5.64.0/mode/xml/xml.js"></script>
@@ -38,7 +38,7 @@
     <map-meta name="projection" content="OSMTILE"></map-meta>
     <map-feature class="ottawa">
       <map-featurecaption>Ottawa</map-featurecaption>
-      <map-geometry>
+      <map-geometry cs="gcrs">
         <map-point>
           <map-coordinates>-75.697193 45.421530</map-coordinates>
         </map-point>
