--- a/static/demo/map-meta-demo.html
+++ b/static/demo/map-meta-demo.html
@@ -36,9 +36,12 @@
   <layer- label="Favourite Restaurant" checked>
     <map-meta name="projection" content="OSMTILE"></map-meta>
     <map-meta name="zoom" content="min=3,max=10,value=3"></map-meta>
+    <!-- cs can also be set through an attribute in map-geometry (cs="gcrs") -->
+    <map-meta name="cs" content="gcrs"></map-meta>
+    
     <map-feature class="favourite">
       <map-featurecaption>Big Daddy's Crab Shack</map-featurecaption>
-      <map-geometry cs="gcrs">
+      <map-geometry>
         <map-point>
           <map-coordinates>-75.690276 45.41868</map-coordinates>
         </map-point>
