--- a/static/demo/map-feature-demo.html
+++ b/static/demo/map-feature-demo.html
@@ -31,67 +31,39 @@
     <div class="tabcontent" id="HTML">
         <!------------------------------------------------- CHANGE THIS ------------------------------------------------->
         <textarea rows="10" style="width:100%" id="htmlEditor">
-<mapml-viewer projection="CBMTILE" zoom="1" lat="45.5052040" lon="-75.2202344" controls>
-  <layer- label="Arizona" checked>
-    <map-meta name="projection" content="CBMTILE"></map-meta>
-    <map-meta name="zoom" content="min=1,max=5,value=0"></map-meta>
-    <map-meta name="cs" content="gcrs"></map-meta>
-    <map-meta name="extent" content="zoom=0,top-left-column=0,top-left-row=0,bottom-right-column=5,bottom-right-row=5"></map-meta>
+<mapml-viewer projection="OSMTILE" zoom="10" lon="-75.7" lat="45.4" controls>
+  <layer- label="OpenStreetMap" src="data/osm.mapml" checked></layer->
 
-    <map-feature zoom="2" class="refDiff1">
-      <map-featurecaption>Feature 1</map-featurecaption>
-      <map-properties>
-        <h1>Test</h1>
-        <a href="http://example.org/" target="_blank">test</a>
-      </map-properties>
-      <map-geometry cs="tilematrix">
+  <layer- label="Features" checked>
+    <map-meta name="projection" content="OSMTILE"></map-meta>
+    <map-feature class="polygon">
+      <map-featurecaption>Polygon</map-featurecaption>
+      <map-geometry cs="gcrs">
         <map-polygon>
-          <map-coordinates>11 11 12 11 12 12 11 12</map-coordinates>
+          <map-coordinates>-75.5859375 45.4656690 -75.6813812 45.4533876 -75.6961441 45.4239978 -75.7249832 45.4083331 -75.7792282 45.3772317 -75.7534790 45.3294614 -75.5831909 45.3815724 -75.6024170 45.4273712 -75.5673981 45.4639834 -75.5859375 45.4656690</map-coordinates>
         </map-polygon>
       </map-geometry>
+      <map-properties><h2>This is a Polygon</h2></map-properties>
     </map-feature>
 
-    <map-feature zoom="2" class="refDiff2">
-      <map-featurecaption>Feature 2</map-featurecaption>
-      <map-properties>
-        <h1>Test</h1>
-      </map-properties>
-      <map-geometry cs="pcrs">
-        <map-polygon>
-          <map-coordinates>257421 -3567196 -271745 1221771 -3896544 242811 -3183549 -2613313</map-coordinates>
-        </map-polygon>
+    <map-feature class="line">
+      <map-featurecaption>Line</map-featurecaption>
+      <map-geometry cs="gcrs">
+        <map-linestring>
+          <map-coordinates>-75.6168365 45.471929 -75.6855011 45.458445 -75.7016373 45.4391764 -75.7030106 45.4259255 -75.7236099 45.4208652 -75.7565689 45.4117074 -75.7833481 45.384225 -75.8197403 45.3714435 -75.8516693 45.377714</map-coordinates>
+        </map-linestring>
       </map-geometry>
+      <map-properties><h2>This is a Line</h2></map-properties>
     </map-feature>
 
-    <map-feature zoom="2" class="refDiff3">
-      <map-featurecaption>Feature 3</map-featurecaption>
-      <map-properties>
-        <h1>Test</h1>
-      </map-properties>
-      <map-geometry cs="tcrs">
-        <map-polygon>
-          <map-coordinates>2771 3106 2946 3113 2954 3210 2815 3192</map-coordinates>
-        </map-polygon>
+    <map-feature class="point">
+      <map-featurecaption>Point</map-featurecaption>
+      <map-geometry cs="gcrs">
+        <map-point>
+          <map-coordinates>-75.6916809 45.4186964</map-coordinates>
+        </map-point>
       </map-geometry>
-    </map-feature>
-
-    <map-feature zoom="2" class="refDiff4">
-      <map-featurecaption>Feature 4</map-featurecaption>
-      <map-properties>
-        <h1>Arizona</h1>
-      </map-properties>
-      <map-geometry>
-        <map-polygon>
-          <map-coordinates>-109.042503 37.000263 -109.04798 31.331629 -111.074448 31.331629 -112.246513 31.704061
-            -114.815198 32.492741 -114.72209 32.717295 -114.524921 32.755634 -114.470151 32.843265 -114.524921
-            33.029481 -114.661844 33.034958 -114.727567 33.40739 -114.524921 33.54979 -114.497536 33.697668
-            -114.535874 33.933176 -114.415382 34.108438 -114.256551 34.174162 -114.136058 34.305608 -114.333228
-            34.448009 -114.470151 34.710902 -114.634459 34.87521 -114.634459 35.00118 -114.574213 35.138103
-            -114.596121 35.324319 -114.678275 35.516012 -114.738521 36.102045 -114.371566 36.140383 -114.251074
-            36.01989 -114.152489 36.025367 -114.048427 36.195153 -114.048427 37.000263 -110.499369 37.00574
-            -109.042503 37.000263</map-coordinates>
-        </map-polygon>
-      </map-geometry>
+      <map-properties><h2>This is a Point</h2></map-properties>
     </map-feature>
   </layer->
 </mapml-viewer></textarea>
@@ -99,19 +71,14 @@
     <div class="tabcontent" id="CSS">
         <!------------------------------------------------- CHANGE THIS ------------------------------------------------->
         <textarea rows="10" style="width:100%" id="cssEditor">
-.refDiff1 {
-  fill: #A0DDE6;
-  stroke: #80C2AF;
+.polygon {
+  fill: #80C2AF;
+  stroke: #1167b1;
 }
-.refDiff2 {
-  fill: #FFD639;
-  stroke: #FBAF00;
+.line {
+  stroke: #dc143c;
 }
-.refDiff3 {
-  fill: #E1AA7D;
-  stroke: #B6D094;
-}
-.refDiff4 {
+.point {
   fill: #D8A47F;
   stroke: #EF8354;
 }</textarea>
