moved class attribute from map-feature to the geometry element

--- a/static/demo/map-a-demo.html
+++ b/static/demo/map-a-demo.html
@@ -36,11 +36,11 @@
 
   <layer- label="Polygon" checked>
     <map-meta name="projection" content="OSMTILE"></map-meta>
-    <map-feature class="polygon">
+    <map-feature>
       <map-featurecaption>Click me!</map-featurecaption>
       <map-geometry cs="gcrs">
         <map-a href="#15, -75.699, 45.420">
-          <map-polygon>
+          <map-polygon class="polygon">
             <map-coordinates>-75.8242035 45.3526278 -75.6793213 45.4572409 -75.5680847 45.4692806 -75.6092834 45.4215881 -75.5756378 45.3810901 -75.7946777 45.3120804</map-coordinates>
           </map-polygon>
         </map-a>
@@ -51,28 +51,28 @@
 
   <layer- label="Points" checked>
     <map-meta name="projection" content="OSMTILE"></map-meta>
-    <map-feature class="point">
+    <map-feature>
       <map-featurecaption>Point 1</map-featurecaption>
       <map-geometry cs="gcrs">
-        <map-point>
+        <map-point class="point">
           <map-coordinates>-75.6978285 45.4202251</map-coordinates>
         </map-point>
       </map-geometry>
       <map-properties></map-properties>
     </map-feature>
-    <map-feature class="point">
+    <map-feature>
       <map-featurecaption>Point 2</map-featurecaption>
       <map-geometry cs="gcrs">
-        <map-point>
+        <map-point class="point">
           <map-coordinates>-75.7002854 45.4199465</map-coordinates>
         </map-point>
       </map-geometry>
       <map-properties></map-properties>
     </map-feature>
-    <map-feature class="point">
+    <map-feature>
       <map-featurecaption>point 3</map-featurecaption>
       <map-geometry cs="gcrs">
-        <map-point>
+        <map-point class="point">
           <map-coordinates>-75.6984723 45.4179207</map-coordinates>
         </map-point>
       </map-geometry>
