--- a/static/demo/layer-demo.html
+++ b/static/demo/layer-demo.html
@@ -36,10 +36,10 @@
   <layer- label="Ottawa" checked>
     <map-meta name="projection" content="OSMTILE"></map-meta>
     <map-meta name="cs" content="gcrs"></map-meta>
-    <map-feature class="ottawa">
+    <map-feature>
       <map-featurecaption>Ottawa</map-featurecaption>
       <map-geometry>
-        <map-point>
+        <map-point class="ottawa">
           <map-coordinates>-75.697193 45.421530</map-coordinates>
         </map-point>
       </map-geometry>
