--- a/static/demo/map-feature-demo.html
+++ b/static/demo/map-feature-demo.html
@@ -36,30 +36,30 @@
 
   <layer- label="Features" checked>
     <map-meta name="projection" content="OSMTILE"></map-meta>
-    <map-feature class="polygon">
+    <map-feature>
       <map-featurecaption>Polygon</map-featurecaption>
       <map-geometry cs="gcrs">
-        <map-polygon>
+        <map-polygon class="polygon">
           <map-coordinates>-75.5859375 45.4656690 -75.6813812 45.4533876 -75.6961441 45.4239978 -75.7249832 45.4083331 -75.7792282 45.3772317 -75.7534790 45.3294614 -75.5831909 45.3815724 -75.6024170 45.4273712 -75.5673981 45.4639834 -75.5859375 45.4656690</map-coordinates>
         </map-polygon>
       </map-geometry>
       <map-properties><h2>This is a Polygon</h2></map-properties>
     </map-feature>
 
-    <map-feature class="line">
+    <map-feature>
       <map-featurecaption>Line</map-featurecaption>
       <map-geometry cs="gcrs">
-        <map-linestring>
+        <map-linestring class="line">
           <map-coordinates>-75.6168365 45.471929 -75.6855011 45.458445 -75.7016373 45.4391764 -75.7030106 45.4259255 -75.7236099 45.4208652 -75.7565689 45.4117074 -75.7833481 45.384225 -75.8197403 45.3714435 -75.8516693 45.377714</map-coordinates>
         </map-linestring>
       </map-geometry>
       <map-properties><h2>This is a Line</h2></map-properties>
     </map-feature>
 
-    <map-feature class="point">
+    <map-feature>
       <map-featurecaption>Point</map-featurecaption>
       <map-geometry cs="gcrs">
-        <map-point>
+        <map-point class="point">
           <map-coordinates>-75.6916809 45.4186964</map-coordinates>
         </map-point>
       </map-geometry>
