--- a/static/demo/map-link-demo.html
+++ b/static/demo/map-link-demo.html
@@ -36,10 +36,10 @@
   <layer- label="Ottawa" checked>
     <map-link rel="license" title="Copyright FooBar Inc."></map-link>
     <map-meta name="projection" content="OSMTILE"></map-meta>
-    <map-feature class="ottawa">
+    <map-feature>
       <map-featurecaption>Ottawa</map-featurecaption>
       <map-geometry cs="gcrs">
-        <map-point>
+        <map-point class="ottawa">
           <map-coordinates>-75.697193 45.421530</map-coordinates>
         </map-point>
       </map-geometry>
