--- a/static/demo/map-meta-demo.html
+++ b/static/demo/map-meta-demo.html
@@ -39,10 +39,10 @@
     <!-- cs can also be set through an attribute in map-geometry (cs="gcrs") -->
     <map-meta name="cs" content="gcrs"></map-meta>
     
-    <map-feature class="favourite">
+    <map-feature>
       <map-featurecaption>Big Daddy's Crab Shack</map-featurecaption>
       <map-geometry>
-        <map-point>
+        <map-point class="favourite">
           <map-coordinates>-75.690276 45.41868</map-coordinates>
         </map-point>
       </map-geometry>
