Added gcrs comments, updated map-a demo
* Added comments explaining cs="gcrs" in the demos
* Polygon is replaced by points using map-meta zoom when clicked on in the map-a demo

--- a/static/demo/map-link-demo.html
+++ b/static/demo/map-link-demo.html
@@ -38,6 +38,7 @@
     <map-meta name="projection" content="OSMTILE"></map-meta>
     <map-feature>
       <map-featurecaption>Ottawa</map-featurecaption>
+      <!-- Setting the geometry coordinates to gcrs, as the default is pcrs -->
       <map-geometry cs="gcrs">
         <map-point class="ottawa">
           <map-coordinates>-75.697193 45.421530</map-coordinates>
