--- a/static/demo/map-a-demo.html
+++ b/static/demo/map-a-demo.html
@@ -36,8 +36,10 @@
 
   <layer- label="Polygon" checked>
     <map-meta name="projection" content="OSMTILE"></map-meta>
+    <map-meta name="zoom" content="min=10,max=11"></map-meta>
     <map-feature>
       <map-featurecaption>Click me!</map-featurecaption>
+      <!-- Setting the geometry coordinates to gcrs, as the default is pcrs -->
       <map-geometry cs="gcrs">
         <map-a href="#15, -75.699, 45.420">
           <map-polygon class="polygon">
@@ -51,8 +53,10 @@
 
   <layer- label="Points" checked>
     <map-meta name="projection" content="OSMTILE"></map-meta>
+    <map-meta name="zoom" content="min=14,max=24"></map-meta>
     <map-feature>
       <map-featurecaption>Point 1</map-featurecaption>
+      <!-- Setting the geometry coordinates to gcrs, as the default is pcrs -->
       <map-geometry cs="gcrs">
         <map-point class="point">
           <map-coordinates>-75.6978285 45.4202251</map-coordinates>
@@ -62,6 +66,7 @@
     </map-feature>
     <map-feature>
       <map-featurecaption>Point 2</map-featurecaption>
+      <!-- Setting the geometry coordinates to gcrs, as the default is pcrs -->
       <map-geometry cs="gcrs">
         <map-point class="point">
           <map-coordinates>-75.7002854 45.4199465</map-coordinates>
@@ -71,6 +76,7 @@
     </map-feature>
     <map-feature>
       <map-featurecaption>point 3</map-featurecaption>
+      <!-- Setting the geometry coordinates to gcrs, as the default is pcrs -->
       <map-geometry cs="gcrs">
         <map-point class="point">
           <map-coordinates>-75.6984723 45.4179207</map-coordinates>
