--- a/static/demo/map-link-demo/index.html
+++ b/static/demo/map-link-demo/index.html
@@ -5,21 +5,21 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Demo</title>
-    <script type="module" src="../dist/mapml-viewer.js"></script>
-    <link rel="stylesheet" href="embeded-demo-style.css"/>
-    
-    <link rel="stylesheet" href="codemirror-5.64.0/lib/codemirror.css">
-    <script src="codemirror-5.64.0/lib/codemirror.js"></script>
-    <script src="codemirror-5.64.0/mode/xml/xml.js"></script>
-    <script src="codemirror-5.64.0/mode/css/css.js"></script>
-    <script src="codemirror-5.64.0/mode/javascript/javascript.js"></script>
-    <script src="codemirror-5.64.0/addon/edit/closetag.js"></script>
+    <script type="module" src="../../dist/mapml-viewer.js"></script>
+    <link rel="stylesheet" href="../embeded-demo-style.css"/>
+
+    <link rel="stylesheet" href="../codemirror-5.64.0/lib/codemirror.css">
+    <script src="../codemirror-5.64.0/lib/codemirror.js"></script>
+    <script src="../codemirror-5.64.0/mode/xml/xml.js"></script>
+    <script src="../codemirror-5.64.0/mode/css/css.js"></script>
+    <script src="../codemirror-5.64.0/mode/javascript/javascript.js"></script>
+    <script src="../codemirror-5.64.0/addon/edit/closetag.js"></script>
 
 </head>
 <body>
     <div style="text-align: center;">
         <!------------------------------------------------- CHANGE THIS ------------------------------------------------->
-        <h2>MapML Demo: &lt;map-meta&gt;</h2>
+        <h2>MapML Demo: &lt;map-link&gt;</h2>
         <button class="run" onclick="plot()" aria-label="run code"><span aria-hidden="true">▶</span></button>
     </div>
 
@@ -31,19 +31,17 @@
     <div class="tabcontent" id="HTML">
         <!------------------------------------------------- CHANGE THIS ------------------------------------------------->
         <textarea rows="10" style="width:100%" id="htmlEditor">
-<mapml-viewer projection="OSMTILE" zoom="3" lat="45.41868" lon="-75.690276" controls>
-  <layer- label="OpenStreetMap" src="data/osm.mapml" checked></layer->
-  <layer- label="Favourite Restaurant" checked>
+<mapml-viewer projection="OSMTILE" zoom="1" lat="60.0" lon="-100.0" controls>
+  <layer- label="OpenStreetMap" src="../data/osm.mapml" checked></layer->
+  <layer- label="Ottawa" checked>
+    <map-link rel="license" title="Copyright FooBar Inc."></map-link>
     <map-meta name="projection" content="OSMTILE"></map-meta>
-    <map-meta name="zoom" content="min=3,max=10,value=3"></map-meta>
-    <!-- cs can also be set through an attribute in map-geometry (cs="gcrs") -->
-    <map-meta name="cs" content="gcrs"></map-meta>
-    
     <map-feature>
-      <map-featurecaption>Big Daddy's Crab Shack</map-featurecaption>
-      <map-geometry>
-        <map-point class="favourite">
-          <map-coordinates>-75.690276 45.41868</map-coordinates>
+      <map-featurecaption>Ottawa</map-featurecaption>
+      <!-- Setting the geometry coordinates to gcrs, as the default is pcrs -->
+      <map-geometry cs="gcrs">
+        <map-point class="ottawa">
+          <map-coordinates>-75.697193 45.421530</map-coordinates>
         </map-point>
       </map-geometry>
     </map-feature>
@@ -53,7 +51,7 @@
     <div class="tabcontent" id="CSS">
         <!------------------------------------------------- CHANGE THIS ------------------------------------------------->
         <textarea rows="10" style="width:100%" id="cssEditor">
-.favourite {
+.ottawa {
   fill: #ea4335;
   stroke: #b21511;
 }</textarea>
@@ -73,7 +71,7 @@
 
         // ------------------------------------------------- CHANGE THIS ------------------------------------------------->
         // Highlighting code 
-        htmlEditor.markText({line: 3, ch: 0}, {line: 5, ch: -1}, {className: "codemirror-highlighted"});
+        htmlEditor.markText({line: 3, ch: 0}, {line: 4, ch: -1}, {className: "codemirror-highlighted"});
 
         // Styling CSS Text Editor
         var cssEditor = CodeMirror.fromTextArea(document.getElementById('cssEditor'), {
