--- a/static/demo/map-meta-demo/index.html
+++ b/static/demo/map-meta-demo/index.html
@@ -5,21 +5,21 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Demo</title>
-    <script type="module" src="../dist/mapml-viewer.js"></script>
-    <link rel="stylesheet" href="embeded-demo-style.css"/>
+    <script type="module" src="../../dist/mapml-viewer.js"></script>
+    <link rel="stylesheet" href="../embeded-demo-style.css"/>
     
-    <link rel="stylesheet" href="codemirror-5.64.0/lib/codemirror.css">
-    <script src="codemirror-5.64.0/lib/codemirror.js"></script>
-    <script src="codemirror-5.64.0/mode/xml/xml.js"></script>
-    <script src="codemirror-5.64.0/mode/css/css.js"></script>
-    <script src="codemirror-5.64.0/mode/javascript/javascript.js"></script>
-    <script src="codemirror-5.64.0/addon/edit/closetag.js"></script>
+    <link rel="stylesheet" href="../codemirror-5.64.0/lib/codemirror.css">
+    <script src="../codemirror-5.64.0/lib/codemirror.js"></script>
+    <script src="../codemirror-5.64.0/mode/xml/xml.js"></script>
+    <script src="../codemirror-5.64.0/mode/css/css.js"></script>
+    <script src="../codemirror-5.64.0/mode/javascript/javascript.js"></script>
+    <script src="../codemirror-5.64.0/addon/edit/closetag.js"></script>
 
 </head>
 <body>
     <div style="text-align: center;">
         <!------------------------------------------------- CHANGE THIS ------------------------------------------------->
-        <h2>MapML Demo: &lt;map-a&gt;</h2>
+        <h2>MapML Demo: &lt;map-meta&gt;</h2>
         <button class="run" onclick="plot()" aria-label="run code"><span aria-hidden="true">▶</span></button>
     </div>
 
@@ -31,58 +31,21 @@
     <div class="tabcontent" id="HTML">
         <!------------------------------------------------- CHANGE THIS ------------------------------------------------->
         <textarea rows="10" style="width:100%" id="htmlEditor">
-<mapml-viewer projection="OSMTILE" zoom="10" lon="-75.7" lat="45.4" controls="">
-  <layer- label="OpenStreetMap" src="data/osm.mapml" checked></layer->
-
-  <layer- label="Polygon" checked>
+<mapml-viewer projection="OSMTILE" zoom="3" lat="45.41868" lon="-75.690276" controls>
+  <layer- label="OpenStreetMap" src="../data/osm.mapml" checked></layer->
+  <layer- label="Favourite Restaurant" checked>
     <map-meta name="projection" content="OSMTILE"></map-meta>
-    <map-meta name="zoom" content="min=10,max=11"></map-meta>
+    <map-meta name="zoom" content="min=3,max=10,value=3"></map-meta>
+    <!-- cs can also be set through an attribute in map-geometry (cs="gcrs") -->
+    <map-meta name="cs" content="gcrs"></map-meta>
+    
     <map-feature>
-      <map-featurecaption>Click me!</map-featurecaption>
-      <!-- Setting the geometry coordinates to gcrs, as the default is pcrs -->
-      <map-geometry cs="gcrs">
-        <map-a href="#15, -75.699, 45.420">
-          <map-polygon class="polygon">
-            <map-coordinates>-75.8242035 45.3526278 -75.6793213 45.4572409 -75.5680847 45.4692806 -75.6092834 45.4215881 -75.5756378 45.3810901 -75.7946777 45.3120804</map-coordinates>
-          </map-polygon>
-        </map-a>
-      </map-geometry>
-      <map-properties></map-properties>
-    </map-feature>
-  </layer->
-
-  <layer- label="Points" checked>
-    <map-meta name="projection" content="OSMTILE"></map-meta>
-    <map-meta name="zoom" content="min=14,max=24"></map-meta>
-    <map-feature>
-      <map-featurecaption>Point 1</map-featurecaption>
-      <!-- Setting the geometry coordinates to gcrs, as the default is pcrs -->
-      <map-geometry cs="gcrs">
-        <map-point class="point">
-          <map-coordinates>-75.6978285 45.4202251</map-coordinates>
+      <map-featurecaption>Big Daddy's Crab Shack</map-featurecaption>
+      <map-geometry>
+        <map-point class="favourite">
+          <map-coordinates>-75.690276 45.41868</map-coordinates>
         </map-point>
       </map-geometry>
-      <map-properties></map-properties>
-    </map-feature>
-    <map-feature>
-      <map-featurecaption>Point 2</map-featurecaption>
-      <!-- Setting the geometry coordinates to gcrs, as the default is pcrs -->
-      <map-geometry cs="gcrs">
-        <map-point class="point">
-          <map-coordinates>-75.7002854 45.4199465</map-coordinates>
-        </map-point>
-      </map-geometry>
-      <map-properties></map-properties>
-    </map-feature>
-    <map-feature>
-      <map-featurecaption>point 3</map-featurecaption>
-      <!-- Setting the geometry coordinates to gcrs, as the default is pcrs -->
-      <map-geometry cs="gcrs">
-        <map-point class="point">
-          <map-coordinates>-75.6984723 45.4179207</map-coordinates>
-        </map-point>
-      </map-geometry>
-      <map-properties></map-properties>
     </map-feature>
   </layer->
 </mapml-viewer></textarea>
@@ -90,17 +53,9 @@
     <div class="tabcontent" id="CSS">
         <!------------------------------------------------- CHANGE THIS ------------------------------------------------->
         <textarea rows="10" style="width:100%" id="cssEditor">
-.map-a {
-  stroke: red;
-}
-.map-a-visited {
-  stroke: green;
-}
-.point {
-  
-}
-.polygon {
-  
+.favourite {
+  fill: #ea4335;
+  stroke: #b21511;
 }</textarea>
     </div>
 
@@ -118,8 +73,7 @@
 
         // ------------------------------------------------- CHANGE THIS ------------------------------------------------->
         // Highlighting code 
-        htmlEditor.markText({line: 7, ch: 0}, {line: 8, ch: -1}, {className: "codemirror-highlighted"});
-        htmlEditor.markText({line: 19, ch: 0}, {line: 20, ch: -1}, {className: "codemirror-highlighted"});
+        htmlEditor.markText({line: 3, ch: 0}, {line: 5, ch: -1}, {className: "codemirror-highlighted"});
 
         // Styling CSS Text Editor
         var cssEditor = CodeMirror.fromTextArea(document.getElementById('cssEditor'), {
