Add Basic Geometry Examples

--- a/static/demo/map-geometry-demo/index.html
+++ b/static/demo/map-geometry-demo/index.html
@@ -51,6 +51,13 @@
     <div class="tabcontent" id="CSS">
         <!------------------------------------------------- CHANGE THIS ------------------------------------------------->
         <textarea rows="10" style="width:100%" id="cssEditor">
+.polygon {
+  fill: #80C2AF;
+  stroke: #1167b1;
+}
+.line {
+  stroke: #dc143c;
+}
 .point {
   fill: #D8A47F;
   stroke: #EF8354;
