--- a/static/demo/map-style-demo/index.html
+++ b/static/demo/map-style-demo/index.html
@@ -51,30 +51,13 @@
         </map-geometrycollection>
       </map-geometry>
     </map-feature>
+    <map-style>.class1{stroke: #73A9AD;stroke-width: 4px;fill: none;fill-opacity: 1;} .class2{stroke: #000000;stroke-width: 2px;fill: #6b6a6a;fill-opacity: 1;} .class3{stroke: #5392bd;fill: #5392bd;fill-opacity: 0.7;}</map-style>
   </layer->
 </mapml-viewer></textarea>
     </div>
     <div class="tabcontent" id="CSS">
         <!------------------------------------------------- CHANGE THIS ------------------------------------------------->
-        <textarea rows="10" style="width:100%" id="cssEditor">
-.class1{
-	stroke: #73A9AD;
-  stroke-width: 4px;
-  fill: none;
-  fill-opacity: 1;
-}
-.class2{
-	stroke: #73A9AD;
-  stroke-width: 4px;
-  fill: none;
-  fill-opacity: 1;
-}
-.class3{
-	stroke: #73A9AD;
-  stroke-width: 4px;
-  fill: none;
-  fill-opacity: 1;
-}</textarea>
+        <textarea rows="10" style="width:100%" id="cssEditor"></textarea>
     </div>
 
     <div id="output"></div>
