--- a/static/demo/extent-demo/index.html
+++ b/static/demo/extent-demo/index.html
@@ -31,9 +31,9 @@
     <div class="tabcontent" id="HTML">
         <!------------------------------------------------- CHANGE THIS ------------------------------------------------->
         <textarea rows="10" style="width:100%" id="htmlEditor">
-<mapml-viewer projection="OSMTILE" lat="10" lon="0" zoom="1">
+<mapml-viewer projection="OSMTILE" lat="10" lon="0" zoom="1" controls>
   <layer- label="OpenStreetMap" checked>
-    <map-extent units="OSMTILE">
+    <map-extent units="OSMTILE" checked>
       <map-input name="z" type="zoom" value="18" min="0" max="18"></map-input>
       <map-input name="x" type="location" units="tilematrix" axis="column" min="0" max="262144"></map-input>
       <map-input name="y" type="location" units="tilematrix" axis="row" min="0" max="262144"></map-input>
